--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -40,12 +40,14 @@
         <h1 class="text-3xl font-semibold mb-4 text-gray-800">Welcome to the ecoMatrix<br> this website is strictly for
             the employees of ecomatrix <br> if you are employe please log in</h1>
         <!-- <p class="text-gray-600">You are successfully logged in.</p> -->
-         <% if(user.role === "employe"){%>
-            <a href="/api/v1/create" class="bg-green-500 py-2 px-10">create offer</a>
-         <%}%>
-         <% if(user.role === "admin"){%>
-            <a href="/api/v1/all-offer" class="bg-green-500 py-2 px-10">show offer</a>
-         <%}%>
+        <% if (user) { %>
+            <% if(user.role==="employe" ){%>
+                <a href="/api/v1/create" class="bg-green-500 py-2 px-10">create offer</a>
+            <%}%>
+            <% if(user.role==="admin" ){%>
+                <a href="/api/v1/all-offer" class="bg-green-500 py-2 px-10">show offer</a>
+            <%}%>
+        <% } %>
     </div>
 
 </body>
