--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -41,7 +41,7 @@
             the employees of ecomatrix <br> if you are employe please log in</h1>
         <!-- <p class="text-gray-600">You are successfully logged in.</p> -->
         <% if (user) { %>
-            <% if(user.role==="employe" ){%>
+            <% if(user.role==="employ" ){%>
                 <a href="/api/v1/create" class="bg-green-500 py-2 px-10">create offer</a>
             <%}%>
             <% if(user.role==="admin" ){%>
