--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -61,6 +61,9 @@
         <a href="/api/v1/create" class="bg-green-500 text-white px-6 py-2 rounded shadow hover:bg-green-600 transition">
           + Create Offer
         </a>
+        <a href="/api/v1/my-offer" class="bg-green-500 text-white px-6 py-2 rounded shadow hover:bg-green-600 transition">
+          My  Offer
+        </a>
       <% } %>
 
       <% if (user.role === "admin") { %>
